--- a/src/template.html
+++ b/src/template.html
@@ -6,41 +6,24 @@
         <title>Hi</title>
     </head>
     <body>
-        <div id="loginPage" class="interface">
-            <h1>Hi Again</h1>
-            <h3>Login</h3>
-            <h5 id="notFound"></h5>
-            <label for="loginUserName">User Name: </label>
-            <input type="text" name="loginUserName" id="loginUserName" />
+        <div id="sidebar">
+            <div id="stuff">
+                <button id="newTask">New Task</button>
+                <button>See all</button>
+                <button>Today</button>
+                <section>Sort by</section> 
+            </div>
 
-            <label for="loginPassword">Password: </label>
-            <input type="password" name="password" id="loginPassword" />
+            <div id="projects">
+                
+            </div>
 
-            <button type="submit" id="loginCredentials">Login</button>
-            <button id="switchToRegister">Register</button>
-        </div>
-
-        <div id="registerPage" class="invisible">
-            <h1>Welcome</h1>
-            <h3>Register</h3>
-            <label for="registerUserName">User Name: </label>
-            <input type="text" name="registerUserName" id="registerUserName" />
-
-            <label for="registerPassword">Passwor: </label>
-            <input
-                type="password"
-                name="registerPassword"
-                id="registerPassword"
-            />
-
-            <button type="submit" id="registerCredentials">Register</button>
-            <button id="switchToLogin">Login</button>
         </div>
 
         <button id="newProject">project+</button>
 
         <li id="list">
-            <button id="newTask">task+</button>
+            
         </li>
     </body>
 </html>
