some stuff im tired

--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
                 <p class="indicator">Projects</p>
                 <button id="newProject" class="creator">project+</button>
         
-                <li id="list">
+                <li id="listOfProjects">
                     
                 </li>
             </div>
