--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,7 @@
                         <option value="priority" autoconplete="off">Priority</option> 
                     </select>
                 </div>
-                <div id="newTaskForGeneralPopUp" class="hidden newTaskForGeneralPopUp"> 
+                <div id="newTaskForGeneralPopUp" class=" newTaskForGeneralPopUp"> 
                     <div class="containerFornewtask">
 
                         <div>
@@ -47,9 +47,10 @@
                         </div>
 
                         <label for="descriptionNewTask">Description: </label> <br>
-                        <input type="text" name="descriptionNewTask" id="descriptionNewTask">
-                            
+                        <input type="text" name="descriptionNewTask" id="descriptionNewTask"> 
                         
+
+                        <button type="submit" id="submitNewTask">Submit</button>
                         </div>
                     </div>
             </div> 
