--- a/src/template.html
+++ b/src/template.html
@@ -21,7 +21,7 @@
                         <option value="priority" autoconplete="off">Priority</option> 
                     </select>
                 </div>
-                <div id="newTaskForGeneralPopUp" class=" newTaskForGeneralPopUp"> 
+                <div id="newTaskForGeneralPopUp" class="hidden newTaskForGeneralPopUp"> 
                     <div class="containerFornewtask">
 
                         <div>
