i want to crash out     added some stuff i want to remove others     want to move everything to be more neat and clean     very sleepy     goodbye

--- a/src/template.html
+++ b/src/template.html
@@ -21,8 +21,10 @@
                         <option value="priority" autoconplete="off">Priority</option> 
                     </select>
                 </div>
-                <div id="newTaskForGeneralPopUp" class="hidden newTaskForGeneralPopUp"> 
+                <div id="newTaskPopUp" class="hidden newTaskPopUp"> 
                     <div class="containerFornewtask">
+
+                        <button id="closePopUp" class="closePopUp">X</button>
 
                         <div>
                             <label for="projectDestination">Project: </label>
